--- a/HDFCommAgent.NET/HDFCommAgent.NET.csproj
+++ b/HDFCommAgent.NET/HDFCommAgent.NET.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<LangVersion>10.0</LangVersion>
+		<LangVersion>default</LangVersion>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<PlatformTarget>AnyCPU</PlatformTarget>
 		<Description>Common wrapper for SI Api</Description>
-		<Version>0.1.1-prev</Version>
+		<Version>1.0.0</Version>
 		<Title>HDFCommAgent.NET</Title>
 		<PackageTags>SI, EZ</PackageTags>
 		<Authors>teranum</Authors>
